--- a/converters/libiconv/Makefile
+++ b/converters/libiconv/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.45 2006/12/02 22:33:00 jschauma Exp $
+# $NetBSD: Makefile,v 1.46 2006/12/03 11:20:12 cbiere Exp $
 
 DISTNAME=	libiconv-1.10
 PKGREVISION=	3
@@ -32,6 +32,7 @@ EGDIR=			${PREFIX}/share/examples/libiconv
 REQD_FILES=		${EGDIR}/charset.alias ${PREFIX}/lib/charset.alias
 
 MAKE_ENV+=		PAX=${PAX:Q}
+MAKE_JOBS_SAFE=		no		# ENOENT(srclib)
 
 # remove any existing charset.alias; if it already exists, libiconv does
 # not overwrite it, and older versions of libiconv wrote incorrect
