--- a/devel/generate/Makefile
+++ b/devel/generate/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2006/08/26 12:59:57 darcy Exp $
+# $NetBSD: Makefile,v 1.8 2007/01/05 10:46:17 rillig Exp $
 #
 
-DISTNAME=	generate-2.3
+DISTNAME=	generate-2.4
 CATEGORIES=	devel
 MASTER_SITES=	ftp://ftp.druid.net/pub/distrib/
 EXTRACT_SUFX=	.tgz
