--- a/net/rtorrent/Makefile
+++ b/net/rtorrent/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2006/11/19 11:50:25 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2007/01/26 18:48:53 tron Exp $
 
 DISTNAME=	rtorrent-0.7.1
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	http://libtorrent.rakshasa.no/downloads/
 
