--- a/audio/gst-plugins0.10-sid/Makefile
+++ b/audio/gst-plugins0.10-sid/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/01/05 10:54:00 drochner Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2007/01/17 18:23:14 drochner Exp $
 #
 
 GST_PLUGINS0.10_NAME=	sid
 GST_PLUGINS0.10_DIRS=	ext/sidplay
 GST_PLUGINS0.10_FLAGS=	sidplay
 
-USE_LANGUAGES+=	c++
+USE_LANGUAGES=	c c++
 
 .include "../../multimedia/gst-plugins0.10-ugly/Makefile.common"
 
