--- a/security/dsniff/Makefile
+++ b/security/dsniff/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2006/02/05 23:10:43 joerg Exp $
+# $NetBSD: Makefile,v 1.28 2007/01/07 09:14:09 rillig Exp $
 
 .include "Makefile.common"
 
@@ -11,10 +11,14 @@ BUILD_TARGET=	libmissing.a webspy
 
 INSTALLATION_DIRS+=	sbin man/man8
 
-.include "../../mk/x11.buildlink3.mk"
-
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/webspy ${PREFIX}/sbin
 	${INSTALL_MAN} ${WRKSRC}/webspy.8 ${PREFIX}/${PKGMANDIR}/man8
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXmu/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
