--- a/x11/neXtaw/Makefile
+++ b/x11/neXtaw/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2006/02/05 23:11:40 joerg Exp $
+# $NetBSD: Makefile,v 1.22 2006/03/04 21:31:10 jlam Exp $
 
 DISTNAME=	neXtaw-0.15.1
 PKGREVISION=	2
@@ -22,8 +22,6 @@ EGDIR=		${PREFIX}/share/examples/${PKGBASE}
 GCC_REQD+=	2.95
 .endif
 
-.include "../../mk/x11.buildlink3.mk"
-
 post-install:
 	${INSTALL_DATA_DIR} ${DOCDIR}
 	${INSTALL_DATA} ${WRKSRC}/README ${DOCDIR}
@@ -34,4 +32,8 @@ post-install:
 		${INSTALL_DATA} $${file} ${EGDIR};			\
 	done
 
+.include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/libXmu/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
+.include "../../x11/xextproto/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
