--- a/graphics/p5-Gnome/Makefile
+++ b/graphics/p5-Gnome/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2006/05/26 23:39:27 joerg Exp $
+# $NetBSD: Makefile,v 1.11 2006/09/09 02:42:01 obache Exp $
 #
 
 .include "../../x11/p5-gtk/Makefile.common"
@@ -20,4 +20,5 @@ pre-configure:
 		${MAKE_PROGRAM} -f ${MAKE_FILE} ${BUILD_TARGET}
 
 .include "../../x11/gnome-libs/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
 .include "../../x11/p5-gtk/Makefile.subpackage"
