--- a/editors/ce-x11/Makefile
+++ b/editors/ce-x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2006/02/05 23:08:55 joerg Exp $
+# $NetBSD: Makefile,v 1.17 2007/01/07 09:13:52 rillig Exp $
 #
 
 .include "../../editors/ce/Makefile.common"
@@ -15,6 +15,9 @@ INSTALL_TARGET=		install-x11 man-install-x11
 
 INSTALLATION_DIRS=	bin ${PKGMANDIR}/man1
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../mk/curses.buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
