--- a/graphics/p5-Image-Imlib2/Makefile
+++ b/graphics/p5-Image-Imlib2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2006/04/06 06:22:05 reed Exp $
+# $NetBSD: Makefile,v 1.20 2006/04/17 13:46:34 wiz Exp $
 #
 
 DISTNAME=	Image-Imlib2-1.04
@@ -20,6 +20,5 @@ PERL5_MODULE_TYPE=	Module::Build
 PERL5_PACKLIST=		auto/Image/Imlib2/.packlist
 
 .include "../../graphics/imlib2/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
