--- a/editors/fe/Makefile
+++ b/editors/fe/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2006/12/19 18:20:21 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2007/01/06 14:59:40 rillig Exp $
 
 DISTNAME=	fe-1.6
 PKGREVISION=	1
@@ -11,7 +11,6 @@ COMMENT=	Folding editor
 
 GNU_CONFIGURE=	yes
 USE_TOOLS+=	msgfmt
-INCOMPAT_CURSES=	NetBSD-2.*-* NetBSD-3.*-*
 
 INSTALLATION_DIRS=	share/doc/fe
 
