--- a/graphics/denemo/Makefile
+++ b/graphics/denemo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2006/02/05 23:09:29 joerg Exp $
+# $NetBSD: Makefile,v 1.18 2007/01/07 08:28:05 rillig Exp $
 #
 
 DISTNAME=	denemo-0.7.6
@@ -10,6 +10,8 @@ HOMEPAGE=	http://denemo.sourceforge.net/
 COMMENT=	GUI musical score editor written in C/GTK+
 
 DEPENDS+=	lilypond-[0-9]*:../../print/lilypond
+
+BROKEN_IN=		pkgsrc-2006Q4
 
 GNU_CONFIGURE=	YES
 USE_DIRS+=	xdg-1.4
