--- a/net/netsaint-plugins/Makefile
+++ b/net/netsaint-plugins/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2006/03/04 21:30:21 jlam Exp $
+# $NetBSD: Makefile,v 1.28 2006/12/28 12:12:58 joerg Exp $
 #
 
 DISTNAME=		netsaint-plugins-1.2.9-4
@@ -10,6 +10,8 @@ MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=netsaintplug/}
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://netsaintplug.sourceforge.net/
 COMMENT=		NetSaint plugins
+
+BROKEN_IN=		pkgsrc-2006Q4
 
 DEPENDS+=		netsaint-base-[0-9]*:../../net/netsaint-base
 .if !exists(/usr/bin/ssh)
