--- a/shells/ast-ksh/Makefile
+++ b/shells/ast-ksh/Makefile
@@ -1,5 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2006/01/07 16:15:46 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2006/04/27 15:32:14 hubertf Exp $
 #
 .include "Makefile.common"
+
+BROKEN_IN=		pkgsrc-2006Q4
 
 .include "../../mk/bsd.pkg.mk"
