--- a/shells/static-ast-ksh/Makefile
+++ b/shells/static-ast-ksh/Makefile
@@ -1,8 +1,10 @@
-# $NetBSD: Makefile,v 1.8 2006/01/07 16:29:15 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2006/04/27 15:32:14 hubertf Exp $
 #
 .include "../../shells/ast-ksh/Makefile.common"
 
 CONFLICTS=	ast-ksh-[0-9]*	# Override.
+
+BROKEN_IN=		pkgsrc-2006Q4
 
 DISTINFO_FILE=	${.CURDIR}/../../shells/ast-ksh/distinfo
 PATCHDIR=	${.CURDIR}/../../shells/ast-ksh/patches
