--- a/www/py-curl/Makefile
+++ b/www/py-curl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.28 2006/10/04 22:04:10 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2006/11/19 11:50:25 wiz Exp $
 
 DISTNAME=	pycurl-7.13.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//}
@@ -9,6 +9,8 @@ MASTER_SITES=	http://pycurl.sourceforge.net/download/
 MAINTAINER=	shell@NetBSD.org
 HOMEPAGE=	http://pycurl.sourceforge.net/
 COMMENT=	Python module interface to the cURL library
+
+BROKEN_IN=		pkgsrc-2006Q4
 
 PYDISTUTILSPKG=	# defined
 PYBINMODULE=	# defined
