--- a/audio/libmusepack/Makefile
+++ b/audio/libmusepack/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.3 2006/03/04 21:28:56 jlam Exp $
+# $NetBSD: Makefile,v 1.4 2006/07/22 04:46:14 rillig Exp $
 #
 
-DISTNAME=		libmusepack-1.0.3
+DISTNAME=		libmpcdec-1.2.4
+PKGNAME=		${DISTNAME:S/mpcdec/musepack/}
 CATEGORIES=		audio
-MASTER_SITES=		http://www.saunalahti.fi/grimmel/musepack.net/source/
+MASTER_SITES=		http://files.musepack.net/source/
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
@@ -11,6 +12,8 @@ HOMEPAGE=		http://www.musepack.net/
 COMMENT=		Portable Musepack decoder library
 
 USE_LANGUAGES=		c c++
+USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
+INSTALLATION_DIRS+=	include/mpcdec
 
 .include "../../mk/bsd.pkg.mk"
