--- a/multimedia/transcode/Makefile
+++ b/multimedia/transcode/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.34 2006/08/24 16:06:25 xtraeme Exp $
+# $NetBSD: Makefile,v 1.35 2007/01/17 23:47:22 wiz Exp $
 #
 
 DISTNAME=	transcode-1.0.2
-PKGREVISION=	7
+PKGREVISION=	8
 CATEGORIES=	multimedia
 MASTER_SITES=	http://dl.fkb.wormulon.net/transcode/ \
 		http://dl.kel.wormulon.net/transcode/ \
@@ -22,6 +22,7 @@ CONFIGURE_ARGS+=	--disable-libpostproc
 CONFIGURE_ARGS+=	--with-libavcodec-prefix=${BUILDLINK_PREFIX.ffmpeg}
 CONFIGURE_ARGS+=	--enable-oss
 CONFIGURE_ARGS+=	--disable-xio
+CONFIGURE_ARGS+=	--without-x
 
 LIBS+=			${LIBOSSAUDIO}
 
