--- a/net/ORBit2/Makefile
+++ b/net/ORBit2/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.51 2006/11/13 20:55:46 drochner Exp $
+# $NetBSD: Makefile,v 1.52 2007/01/06 19:05:00 rillig Exp $
 #
 
-DISTNAME=		ORBit2-2.14.4
+DISTNAME=		ORBit2-2.14.5
 CATEGORIES=		net gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/ORBit2/2.14/}
 EXTRACT_SUFX=		.tar.bz2
