--- a/devel/check/Makefile
+++ b/devel/check/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2006/02/05 23:08:40 joerg Exp $
+# $NetBSD: Makefile,v 1.13 2006/03/04 21:29:13 jlam Exp $
 #
 
-DISTNAME=	check-0.9.3
-PKGREVISION=	2
+DISTNAME=	check-0.9.5
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=check/}
 
@@ -13,5 +12,8 @@ COMMENT=	Unit test framework for C
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS+=--enable-plain-docdir
 USE_TOOLS+=	gmake
+USE_LIBTOOL=	yes
+INFO_FILES=	yes
+PKGCONFIG_OVERRIDE=	check.pc.in
 
 .include "../../mk/bsd.pkg.mk"
