--- a/wm/bsetroot/Makefile
+++ b/wm/bsetroot/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2006/02/05 23:11:12 joerg Exp $
+# $NetBSD: Makefile,v 1.19 2007/01/07 09:14:14 rillig Exp $
 #
 
 DISTNAME=	blackbox-0.65.0
@@ -25,6 +25,10 @@ do-install:
 	${INSTALL_MAN} ${WRKSRC}/doc/bsetroot.1 ${PREFIX}/${PKGMANDIR}/man1
 	( cd ${WRKSRC}/nls && ${MAKE} install )
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../devel/gettext-lib/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
