--- a/wm/blackbox70/Makefile
+++ b/wm/blackbox70/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.26 2006/02/05 23:11:12 joerg Exp $
+# $NetBSD: Makefile,v 1.1 2006/08/20 23:07:17 jschauma Exp $
 #
 
 DISTNAME=	blackbox-0.70.1
@@ -17,5 +17,8 @@ USE_LANGUAGES=	c c++
 GNU_CONFIGURE=	YES
 USE_TOOLS+=     pkg-config
 
-.include "../../mk/x11.buildlink3.mk"
+BUILDLINK_DEPMETHOD.libXt?=	build
+
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
